# codex-portfolio

./: .aiexclude  .gitignore  CLAUDE.md  README.md  cli.py  index.html  pyproject.toml  tailwind.config.js
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
deploy/: .env.example
docs/: PLAN_DOCS_UPDATE.md  README.md  README.md.bak
docs/architecture/: README.md  README.md.bak  project_schema.md  project_schema.md.bak
docs/architecture/prototype/: 01_prototype_tech.md  02_deployment_logic.md  README.md
docs/architecture/ru/: README.md  README.md.bak  django_transition.md  django_transition.md.bak
docs/design/: 01_identity.md  02_layout_grid.md  03_ui_components.md  04_page_flow.md  05_content_map.md  06_visual_dna.md  Experience_Page_Evolution.md  README.md
docs/en_EN/architecture/: README.md
docs/en_EN/design/: README.md  content_map.md  experience_evolution.md  identity.md  layout_grid.md  page_flow.md  ui_components.md  visual_dna.md
docs/en_EN/infrastructure/: README.md
docs/en_EN/management/: README.md  ROADMAP.md
docs/en_EN/meta/: README.md  documentation_standard.md
docs/infrastructure/: README.md
docs/management/: README.md  ROADMAP.md
docs/management/tasks/: README.md
docs/meta/: README.md  README.md.bak  navigation_standard.md  navigation_standard.md.bak
docs/meta/ai_instructions/: README.md  git_commit_standard.md  system_role.md
docs/ru_RU/architecture/: README.md
scripts/: generate_project_tree.py  lint_docs.py
src/prototype/: contact.html  experience.html  portfolio.html  projects.html
(+214 files in other folders)
